dynamically adjust margin-top to prevent admin top menu from overlapping the content
The issue with HTML margin-top: 30px is it appears when users are not logged in.

--- a/tendenci/apps/base/static/css/tendenci.css
+++ b/tendenci/apps/base/static/css/tendenci.css
@@ -1,7 +1,3 @@
-html {
-    margin-top: 30px;
-}
-
 
 /* Bootstrap overrides */
 .navbar-nav > li.dropup > .dropdown-menu {
